--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,5 +5,4 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - run: poetry install
-      - run: poetry run flake8 brain_games
+      - run: make install
