--- a/github-actions-demo.yml
+++ b/github-actions-demo.yml
@@ -1,7 +1,20 @@
-name: Test project
-on: [push, pull_request]
+
+name: Python CI
+
+on:
+  - push
+  - pull_request
+
 jobs:
-  Explore-GitHub-Actions:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - run: poetry run flake8 brain_games
+      - name: Check out repository code
+        uses: actions/checkout@v2
+      - name: Install dependencies
+        run: |
+          pip install poetry
+          make install
+      - name: Run linter
+        run: |
+          make lint
