--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "hexlet-code"
-version = "0.6.3"
+version = "0.7.9"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["KalashnikovM"]
 packages = [{ include = "brain_games" }]
 
 [tool.poetry.dependencies]
