--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "hexlet-code"
+name = "Mhlk-brain-games"
 version = "0.8.1"
-description = ""
+description = "Run and go"
 authors = ["KalashnikovM"]
 packages = [{ include = "brain_games" }]
 
